--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <title>Erwin Lejeune - Portfolio Webpage</title>
+      <title>Nicole Zattarin</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="description" content="Nicole Zattarin" />
       <meta name="keywords" content="portfolio,website,personal website,github,projects,computer science and engineering" />
@@ -44,8 +44,8 @@
             <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
                <div class="text-center">
                   <div class="author-img" style="background-image: url(images/link.png);"></div>
-                  <h1 id="colorlib-logo"><a href="https://guilyx.github.io">Erwin Lejeune</a></h1>
-                  <p><strong>Msc-Robotics, EC Nantes</strong></p>
+                  <h1 id="colorlib-logo"><a href="https://guilyx.github.io">Nicole Zattarin</a></h1>
+                  <p><strong>Quant Dev @ XSOR Capital </strong></p>
                </div>
                <nav id="colorlib-main-menu" role="navigation" class="navbar">
                   <div id="navbar" class="collapse">
@@ -232,13 +232,12 @@
                                        <i class="fa fa-android"></i>
                                     </div>
                                     <div class="timeline-label">
-                                       <h2><a href="https://www.ec-nantes.fr/graduate/masters-/embedded-real-time-systems-coro-erts--188454.kjsp?RH=1490354057891">Master's in Control and Robotics</a> <span>2019 - 2021</span></h2>
+                                       <h2>MSc Computer and Informaiton Engineering</a><span>ICT for Internet and Multimedia</span><span>2021 - 2023</span></h2>
                                        <p><strong>Ecole Centrale de Nantes</strong><br>
-                                          🎯 Specialized in Embedded Real-Time Systems. <br>
-                                          Developed low-level drivers for sensors. <br>
-                                          Implemented path planning solutions in robots, simulation. <br>
-                                          Integrated ROS routines to wheeled and industrial robots. <br>
-                                          Benchmarked and created packages for Hard Real-Time ROS.
+                                          🎯 Specialized in Data Science and Deep Learning <br>
+                                          🎯 Computer Vision and Deep Learning-based processing of 2D and 3D data <br>
+                                          🎯 Natural Language Processing tasks and libraries<br>
+                                          Big data management with PySpark and PostgreSQL<br>
                                        <p></p>
                                     </div>
                                  </div>
