--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <!----Side bar--->
             <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
                <div class="text-center">
-                  <div class="author-img" style="background-image: url(images/link.png);"></div>
+                  <div class="author-img" style="background-image: url(images/me.png);"></div>
                   <h1 id="colorlib-logo"><a href="https://guilyx.github.io">Nicole Zattarin</a></h1>
                   <p><strong>Quant Dev @ XSOR Capital </strong></p>
                </div>
