--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <div class="col-md-12">
                            <div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
                               <div class="col-md-12" style="margin-bottom: -30px">
-                                 <img src="images/firmware.png" alt="intro" class="img-responsive">
+                                 <img src="images/bg.png" alt="intro" class="img-responsive">
                               </div>
                            </div>
                         </div>
