--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <!----- main page--------->
             <div id="colorlib-main">
                <!-------------------Intro--------------->
-               <section class="colorlib-about" data-section="about">
+               <!-- <section class="colorlib-about" data-section="about">
                   <div class="colorlib-narrow-content">
                      <div class="row">
                         <div class="col-md-12">
@@ -83,7 +83,7 @@
                         </div>
                      </div>
                   </div>
-               </section>
+               </section> -->
                <!---------------About me---------------------->
                <section class="colorlib-about" data-section="about">
                   <div class="colorlib-narrow-content">
@@ -160,9 +160,9 @@
                                        <h2>XSOR Capital</a> <span>July 2022 - Now</span></h2>
                                        <p><strong>Quant Dev</strong><br>
                                           I am contributing in the developing of Machine Learning strategies for Algorithmic trading<br>.
-                                          🔧 Developing a Python framework for backtesting and live trading.<br>
+                                          💻 Developing a Python framework for backtesting and live trading.<br>
                                           👨🏽‍💻 Implementing Machine Learning algorithms for financial time series prediction.<br>
-                                          💻 Data providers and trading platforms integration.<br>
+                                          📈 Data providers and trading platforms integration.<br>
                                        <p></p>
                                     </div>
                                  </div>
@@ -235,9 +235,9 @@
                                        <h2>MSc Computer and Informaiton Engineering</a><span>ICT for Internet and Multimedia</span><span>2021 - 2023</span></h2>
                                        <p><strong>Ecole Centrale de Nantes</strong><br>
                                           🎯 Specialized in Data Science and Deep Learning <br>
-                                          🎯 Computer Vision and Deep Learning-based processing of 2D and 3D data <br>
-                                          🎯 Natural Language Processing tasks and libraries<br>
-                                          Big data management with PySpark and PostgreSQL<br>
+                                          🖼️ Computer Vision and Deep Learning-based processing of 2D and 3D data <br>
+                                          📚 Natural Language Processing tasks and libraries<br>
+                                          💾 Big data management with PySpark and PostgreSQL<br>
                                        <p></p>
                                     </div>
                                  </div>
