--- a/index.html
+++ b/index.html
@@ -100,18 +100,16 @@
                               </div>
                            </div>
                            <div class="row">
-                              <!---
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-                                 <a href="cp.html" target="_blank">
-                                    <div class="services color-5">
-                                       <span class="icon2"><i class="fa fa-desktop"></i></span>
-                                       <h3>Programming<br> Profile</h3>
+                                 <!-- <a href="finance.html" target="_blank"> -->
+                                    <div class="services color-2">
+                                       <img src="images/finance.png" alt="fin icon" height="100">
+                                       <h3>Algorithmic Trading</h3>
                                     </div>
                                  </a>
-                              </div>
-                              --->
+                              </div>                              
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-                                 <a href="robots.html" target="_blank">
+                                 <!-- <a href="robots.html" target="_blank"> -->
                                     <div class="services color-2">
                                        <img src="images/atom.png" alt="atom icon" height="100">
                                        <h3>Physics</h3>
@@ -119,7 +117,7 @@
                                  </a>
                               </div>
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-                                 <a href="embedded.html" target="_blank">
+                                 <!-- <a href="embedded.html" target="_blank"> -->
                                     <div class="services color-3">
                                        <img src="images/ai.png" alt="ai" height="100">
                                        <h3>Artificial<br>Intelligence</h3>
@@ -127,7 +125,7 @@
                                  </a>
                               </div>
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-                                 <a href="ml.html" target="_blank">
+                                 <!-- <a href="ml.html" target="_blank"> -->
                                     <div class="services color-1">
                                        <img src="images/dl.png" alt="ai" height="100">
                                        <h3>Deep<br>Learning</h3>
