--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
                                  <!-- <a href="robots.html" target="_blank"> -->
                                     <div class="services color-2">
-                                       <img src="images/atom.png" alt="atom icon" height="100">
+                                       <img src="images/atom.png" alt="atom icon" height="110">
                                        <h3>Physics</h3>
                                     </div>
                                  </a>
@@ -157,7 +157,7 @@
                                     <div class="timeline-label">
                                        <h2>XSOR Capital</a> <span>July 2022 - Now</span></h2>
                                        <p><strong>Quant Dev</strong><br>
-                                          I am contributing in the developing of Machine Learning strategies for Algorithmic trading<br>.
+                                          I am contributing in the developing of Machine Learning strategies for Algorithmic trading.<br>
                                           💻 Developing a Python framework for backtesting and live trading.<br>
                                           👨🏽‍💻 Implementing Machine Learning algorithms for financial time series prediction.<br>
                                           📈 Data providers and trading platforms integration.<br>
@@ -202,14 +202,13 @@
                         </div>
                      </div>
                      <p>I am not just pursuing a career in Robotics and Embedded Software Engineering, I am geniuenly passionated by new technologies, open-source and continuously learning new things.</p>
-                     <iframe width="600" height="600" src="https://nicolezattarin.github.io/github-profile-languages/api.html?guilyx" frameborder="0"></iframe>
                      <br>
-                     <script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"></script>
-                     <link rel="stylesheet" href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css"/>
-                     <div class="calendar"></div>
-                     <script>
-                        GitHubCalendar(".calendar", "Guilyx", { responsive: true });
-                    </script>
+                     <!-- insert badges -->
+                     <p align="left">
+                        <a href="https://skillicons.dev">
+                          <img src="https://skillicons.dev/icons?i=git,github,gitlab,azure,cpp,py,pytorch,latex,postgres" />
+                        </a>
+                      </p>
                   </div>
                </section>
                <!--------------Education----------->
@@ -256,21 +255,6 @@
                                     </div>
                                  </div>
                               </article>
-                              <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
-                                 <div class="timeline-entry-inner">
-                                    <div class="timeline-icon color-1">
-                                       <i class="fa fa-plug"></i>
-                                    </div>
-                                    <div class="timeline-label">
-                                       <h2><a href='#'>Bachelor's in Electronics and Electrical Engineering</a> <span>2015 - 2018</span></h2>
-                                       <p><strong>Université de Nantes</strong><br>
-                                          🎯 Specialized in Computer Engineering.<br>
-                                          Prototyped metal detectors, an UAV, a chronometer from scratch.<br>
-                                          Studied sensor manufacturing and development for autonomous vehicles<br></p>
-                                       <p></p>
-                                    </div>
-                                 </div>
-                              </article>
                               <article class="timeline-entry begin animate-box" data-animate-effect="fadeInBottom">
                                  <div class="timeline-entry-inner">
                                     <div class="timeline-icon color-none">
@@ -282,6 +266,28 @@
                      </div>
                   </div>
                </section>
+               <!--------Projects---------->
+               <section class="colorlib-experience" data-section="education">
+                  <div class="colorlib-narrow-content">
+                     <div class="row">
+                        <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+                           <h2>Education</h2>
+                           <hr>
+                        </div>
+                     </div>
+                     <div class="row">
+                        <div class="col-md-12">
+                           <div class="timeline-centered">
+                              <!-- github cards -->
+                              <div class="github-card" data-github="nicolezattarin/LOB-feature-analysis" data-width="400" data-height="" data-theme="default"></div>
+                              <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
+                        </div>
+                     </div>
+                  </div>
+               </section>
+
+
+
                <!--------Contact---------->
                <section class="colorlib-contact" data-section="contact">
                   <div class="colorlib-narrow-content">
