--- a/index.html
+++ b/index.html
@@ -267,6 +267,9 @@
                   </div>
                </section>
                <!--------Projects---------->
+               <!-- 
+                  BERT-Aspect-Based-Sentiment-Analysis 
+               -->
                <section class="colorlib-experience" data-section="education">
                   <div class="colorlib-narrow-content">
                      <div class="row">
@@ -278,8 +281,20 @@
                      <div class="row">
                         <div class="col-md-12">
                               <!-- github cards -->
+                           <align="float">
                               <div class="github-card" data-github="nicolezattarin/LOB-feature-analysis" data-width="400" data-height="" data-theme="default"></div>
                               <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
+                              <div class="github-card" data-github="nicolezattarin/BERT-Aspect-Based-Sentiment-Analysis" data-width="400" data-height="" data-theme="default"></div>
+                              <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
+                              <div class="github-card" data-github="nicolezattarin/PointCloudCompression" data-width="400" data-height="" data-theme="default"></div>
+                              <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
+                              <div class="github-card" data-github="nicolezattarin/3D-Object-Classification" data-width="400" data-height="" data-theme="default"></div>
+                              <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
+                              <div class="github-card" data-github="nicolezattarin/IoMT-efficient-information-distribution" data-width="400" data-height="" data-theme="default"></div>
+                              <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
+                              <div class="github-card" data-github="nicolezattarin/OpenCV-parking-lot-detection" data-width="400" data-height="" data-theme="default"></div>
+                              <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
+                           </align>
                      </div>
                   </div>
                </section>
