--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
                   <div id="navbar" class="collapse">
                      <ul>
                         <li><a href="#" data-nav-section="about">About</a></li>
+                        <li><a href="#" data-nav-section="experience">Work Experience</a></li>
                         <li><a href="#" data-nav-section="education">Education</a></li>
                         <li><a href="#" data-nav-section="skills">Skills</a></li>
-                        <li><a href="#" data-nav-section="experience">Work Experience</a></li>
+                        <li><a href="#" data-nav-section="selected projects">Selected Projects</a></li>
                         <li><a href="#" data-nav-section="contact">Contact</a></li>
                      </ul>
                   </div>
@@ -115,7 +116,7 @@
                               <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
                                  <!-- <a href="robots.html" target="_blank"> -->
                                     <div class="services color-2">
-                                       <img src="images/atom.png" alt="atom icon" height="120">
+                                       <img src="images/atom.png" alt="atom icon" height="118">
                                        <h3>Physics</h3>
                                     </div>
                                  </a>
@@ -274,11 +275,11 @@
                <!-- 
                   BERT-Aspect-Based-Sentiment-Analysis 
                -->
-               <section class="colorlib-experience" data-section="education">
+               <section class="colorlib-experience" data-section="selected projects">
                   <div class="colorlib-narrow-content">
                      <div class="row">
                         <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-                           <h2>Education</h2>
+                           <h2>Selected Projects</h2>
                            <hr>
                         </div>
                      </div>
@@ -286,17 +287,17 @@
                         <div class="col-md-12">
                               <!-- github cards -->
                            <align="float">
-                              <div class="github-card" data-github="nicolezattarin/LOB-feature-analysis" data-width="400" data-height="" data-theme="default"></div>
+                              <div class="github-card" data-github="nicolezattarin/LOB-feature-analysis" data-width="300" data-height="" data-theme="default"></div>
                               <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
-                              <div class="github-card" data-github="nicolezattarin/BERT-Aspect-Based-Sentiment-Analysis" data-width="400" data-height="" data-theme="default"></div>
+                              <div class="github-card" data-github="nicolezattarin/BERT-Aspect-Based-Sentiment-Analysis" data-width="300" data-height="" data-theme="default"></div>
                               <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
-                              <div class="github-card" data-github="nicolezattarin/PointCloudCompression" data-width="400" data-height="" data-theme="default"></div>
+                              <div class="github-card" data-github="nicolezattarin/PointCloudCompression" data-width="300" data-height="" data-theme="default"></div>
                               <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
-                              <div class="github-card" data-github="nicolezattarin/3D-Object-Classification" data-width="400" data-height="" data-theme="default"></div>
+                              <div class="github-card" data-github="nicolezattarin/3D-Object-Classification" data-width="300" data-height="" data-theme="default"></div>
                               <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
-                              <div class="github-card" data-github="nicolezattarin/IoMT-efficient-information-distribution" data-width="400" data-height="" data-theme="default"></div>
+                              <div class="github-card" data-github="nicolezattarin/IoMT-efficient-information-distribution" data-width="300" data-height="" data-theme="default"></div>
                               <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
-                              <div class="github-card" data-github="nicolezattarin/OpenCV-parking-lot-detection" data-width="400" data-height="" data-theme="default"></div>
+                              <div class="github-card" data-github="nicolezattarin/OpenCV-parking-lot-detection" data-width="300" data-height="" data-theme="default"></div>
                               <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
                            </align>
                      </div>
