--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
                   <p style="font-size: 30px; margin-bottom: 0px;"><a href="https://twitter.com/zattacole" style="color: black;" class="fa fa-twitter"></a> &nbsp;&nbsp;&nbsp;&nbsp;
                      <a href="https://www.linkedin.com/in/nicole-zattarin-a87768105/" style="color: black;" class="fa fa-linkedin"></a> &nbsp;&nbsp;&nbsp;&nbsp;
                      <a href="https://github.com/nicolezattarin" style="color: black;" class="fa fa-github"></a>
+                     <!-- google mail -->
+                     <a href="mailto:nicole.zattarin@gmail.com" style="color: black;" class="fa fa-envelope"></a>
                   </p>
                </div>
                <nav id="colorlib-main-menu" role="navigation" class="navbar">
