--- a/index.html
+++ b/index.html
@@ -289,17 +289,17 @@
                         <div class="col-md-12">
                               <!-- github cards -->
                            <align="float">
-                              <div class="github-card" data-github="nicolezattarin/LOB-feature-analysis" data-width="300" data-height="" data-theme="default"></div>
+                              <div class="github-card" data-github="nicolezattarin/LOB-feature-analysis" data-width="350" data-height="" data-theme="medium"></div>
                               <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
-                              <div class="github-card" data-github="nicolezattarin/BERT-Aspect-Based-Sentiment-Analysis" data-width="300" data-height="" data-theme="default"></div>
+                              <div class="github-card" data-github="nicolezattarin/BERT-Aspect-Based-Sentiment-Analysis" data-width="350" data-height="" data-theme="medium"></div>
                               <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
-                              <div class="github-card" data-github="nicolezattarin/PointCloudCompression" data-width="300" data-height="" data-theme="default"></div>
+                              <div class="github-card" data-github="nicolezattarin/PointCloudCompression" data-width="350" data-height="" data-theme="medium"></div>
                               <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
-                              <div class="github-card" data-github="nicolezattarin/3D-Object-Classification" data-width="300" data-height="" data-theme="default"></div>
+                              <div class="github-card" data-github="nicolezattarin/3D-Object-Classification" data-width="350" data-height="" data-theme="medium"></div>
                               <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
-                              <div class="github-card" data-github="nicolezattarin/IoMT-efficient-information-distribution" data-width="300" data-height="" data-theme="default"></div>
+                              <div class="github-card" data-github="nicolezattarin/IoMT-efficient-information-distribution" data-width="350" data-height="" data-theme="medium"></div>
                               <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
-                              <div class="github-card" data-github="nicolezattarin/OpenCV-parking-lot-detection" data-width="300" data-height="" data-theme="default"></div>
+                              <div class="github-card" data-github="nicolezattarin/OpenCV-parking-lot-detection" data-width="350" data-height="" data-theme="medium"></div>
                               <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
                            </align>
                      </div>
