--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                   <p><strong>Quant Dev @ XSOR Capital </strong></p>
                   <p style="font-size: 30px; margin-bottom: 0px;"><a href="https://twitter.com/zattacole" style="color: black;" class="fa fa-twitter"></a> &nbsp;&nbsp;&nbsp;&nbsp;
                      <a href="https://www.linkedin.com/in/nicole-zattarin-a87768105/" style="color: black;" class="fa fa-linkedin"></a> &nbsp;&nbsp;&nbsp;&nbsp;
-                     <a href="https://github.com/nicolezattarin" style="color: black;" class="fa fa-github"></a>
+                     <a href="https://github.com/nicolezattarin" style="color: black;" class="fa fa-github"></a>&nbsp;&nbsp;&nbsp;&nbsp;
                      <!-- google mail -->
                      <a href="mailto:nicole.zattarin@gmail.com" style="color: black;" class="fa fa-envelope"></a>
                   </p>
@@ -289,17 +289,17 @@
                         <div class="col-md-12">
                               <!-- github cards -->
                            <align="float">
-                              <div class="github-card" data-github="nicolezattarin/LOB-feature-analysis" data-width="350" data-height="" data-theme="medium"></div>
+                              <div class="github-card" data-github="nicolezattarin/LOB-feature-analysis" data-width="350" data-height="" data-theme="default"></div>
                               <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
-                              <div class="github-card" data-github="nicolezattarin/BERT-Aspect-Based-Sentiment-Analysis" data-width="350" data-height="" data-theme="medium"></div>
+                              <div class="github-card" data-github="nicolezattarin/BERT-Aspect-Based-Sentiment-Analysis" data-width="350" data-height="" data-theme="default"></div>
                               <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
-                              <div class="github-card" data-github="nicolezattarin/PointCloudCompression" data-width="350" data-height="" data-theme="medium"></div>
+                              <div class="github-card" data-github="nicolezattarin/PointCloudCompression" data-width="350" data-height="" data-theme="default"></div>
                               <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
-                              <div class="github-card" data-github="nicolezattarin/3D-Object-Classification" data-width="350" data-height="" data-theme="medium"></div>
+                              <div class="github-card" data-github="nicolezattarin/3D-Object-Classification" data-width="350" data-height="" data-theme="default"></div>
                               <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
-                              <div class="github-card" data-github="nicolezattarin/IoMT-efficient-information-distribution" data-width="350" data-height="" data-theme="medium"></div>
+                              <div class="github-card" data-github="nicolezattarin/IoMT-efficient-information-distribution" data-width="350" data-height="" data-theme="default"></div>
                               <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
-                              <div class="github-card" data-github="nicolezattarin/OpenCV-parking-lot-detection" data-width="350" data-height="" data-theme="medium"></div>
+                              <div class="github-card" data-github="nicolezattarin/OpenCV-parking-lot-detection" data-width="350" data-height="" data-theme="default"></div>
                               <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
                            </align>
                      </div>
