--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                </nav>
             </aside>
             <!--- Github ribbon ----------->
-            <a href="https://github.com/Guilyx/guilyx.github.io" class="github-corner" aria-label="View source on GitHub">
+            <a href="https://github.com/nicolezattarin" class="github-corner" aria-label="View source on GitHub">
                <svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true">
                   <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
                   <path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
@@ -175,7 +175,7 @@
                               <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
                                  <div class="timeline-entry-inner">
                                     <div class="timeline-icon color-5">
-                                       <i class="fa fa-circle-nodes"></i>
+                                       <i class="fa-light fa-circle-nodes"></i>
                                     </div>
                                     <div class="timeline-label">
                                        <h2><a href="https://smartkyc.com">Smart KYC</a> <span>March 2023 - May 2023</span></h2>
@@ -249,7 +249,7 @@
                               <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
                                  <div class="timeline-entry-inner">
                                     <div class="timeline-icon color-3">
-                                       <i class="fa fa-atom"></i>
+                                       <i class="fa-solid fa-atom"></i>
                                     </div>
                                     <div class="timeline-label">
                                        <h2><a href="https://ynov.com/formation/ynov-masteres/mastere-robotique-et-ingenierie-systeme">Master's in Robotics and Embedded Systems</a> <span>2018 - 2019</span></h2>
@@ -289,17 +289,17 @@
                         <div class="col-md-12">
                               <!-- github cards -->
                            <align="float">
-                              <div class="github-card" data-github="nicolezattarin/LOB-feature-analysis" data-width="350" data-height="" data-theme="default"></div>
+                              <div class="github-card" data-github="nicolezattarin/LOB-feature-analysis" data-width="360" data-height="" data-theme="default"></div>
                               <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
-                              <div class="github-card" data-github="nicolezattarin/BERT-Aspect-Based-Sentiment-Analysis" data-width="350" data-height="" data-theme="default"></div>
+                              <div class="github-card" data-github="nicolezattarin/BERT-Aspect-Based-Sentiment-Analysis" data-width="360" data-height="" data-theme="default"></div>
                               <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
-                              <div class="github-card" data-github="nicolezattarin/PointCloudCompression" data-width="350" data-height="" data-theme="default"></div>
+                              <div class="github-card" data-github="nicolezattarin/PointCloudCompression" data-width="360" data-height="" data-theme="default"></div>
                               <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
-                              <div class="github-card" data-github="nicolezattarin/3D-Object-Classification" data-width="350" data-height="" data-theme="default"></div>
+                              <div class="github-card" data-github="nicolezattarin/3D-Object-Classification" data-width="360" data-height="" data-theme="default"></div>
                               <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
-                              <div class="github-card" data-github="nicolezattarin/IoMT-efficient-information-distribution" data-width="350" data-height="" data-theme="default"></div>
+                              <div class="github-card" data-github="nicolezattarin/IoMT-efficient-information-distribution" data-width="360" data-height="" data-theme="default"></div>
                               <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
-                              <div class="github-card" data-github="nicolezattarin/OpenCV-parking-lot-detection" data-width="350" data-height="" data-theme="default"></div>
+                              <div class="github-card" data-github="nicolezattarin/OpenCV-parking-lot-detection" data-width="360" data-height="" data-theme="default"></div>
                               <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
                            </align>
                      </div>
