--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                               <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
                                  <div class="timeline-entry-inner">
                                     <div class="timeline-icon color-4">
-                                       <i class="fa fa-terminal"></i>
+                                       <i class="fa fa-line-chart"></i>
                                     </div>
                                     <div class="timeline-label">
                                        <h2>XSOR Capital</a> <span>July 2022 - Now</span></h2>
@@ -175,7 +175,7 @@
                               <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
                                  <div class="timeline-entry-inner">
                                     <div class="timeline-icon color-5">
-                                       <i class="fa-light fa-circle-nodes"></i>
+                                       <i class="fa fa-terminal"></i>
                                     </div>
                                     <div class="timeline-label">
                                        <h2><a href="https://smartkyc.com">Smart KYC</a> <span>March 2023 - May 2023</span></h2>
