--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                               <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
                                  <div class="timeline-entry-inner">
                                     <div class="timeline-icon color-3">
-                                       <i class="fa-solid fa-atom"></i>
+                                       <i class="fa fa-gear"></i>
                                     </div>
                                     <div class="timeline-label">
                                        <h2><a href="https://ynov.com/formation/ynov-masteres/mastere-robotique-et-ingenierie-systeme">Master's in Robotics and Embedded Systems</a> <span>2018 - 2019</span></h2>
