--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                               <!-- github cards -->
                            <align="float">
                               <div class="github-card" data-github="nicolezattarin/LOB-feature-analysis" data-width="360" data-height="" data-theme="default"></div>
-                              <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
+                              <script src="https://github.com/nicolezattarin/github-cards/src/widget.js"></script>
                               <div class="github-card" data-github="nicolezattarin/BERT-Aspect-Based-Sentiment-Analysis" data-width="360" data-height="" data-theme="default"></div>
                               <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
                               <div class="github-card" data-github="nicolezattarin/PointCloudCompression" data-width="360" data-height="" data-theme="default"></div>
