--- a/index.html
+++ b/index.html
@@ -286,8 +286,9 @@
                      <div class="row">
                         <div class="col-md-12">
                            <align="float">
-                              <div class="github-card" data-github="nicolezattarin/LOB-feature-analysis" data-width="360" data-height="" data-theme="default"></div>
-                              <script src="https://github.com/nicolezattarin/github-cards/src/widget.js"></script>
+                              <script src="https://tarptaeya.github.io/repo-card/repo-card.js"></script>
+                              <div class="repo-card" data-repo="nicolezattarin/LOB-feature-analysis"></div>
+
                               <div class="github-card" data-github="nicolezattarin/BERT-Aspect-Based-Sentiment-Analysis" data-width="360" data-height="" data-theme="default"></div>
                               <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
                               <div class="github-card" data-github="nicolezattarin/PointCloudCompression" data-width="360" data-height="" data-theme="default"></div>
