--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                         <div class="col-md-12">
                            <align="float">
                               <script src="https://tarptaeya.github.io/repo-card/repo-card.js"></script>
-                              <div class="repo-card" data-repo="nicolezattarin/LOB-feature-analysis"></div>
+                              <div class="repo-card" data-repo="nicolezattarin/LOB-feature-analysis" width="360"></div>
 
                               <div class="github-card" data-github="nicolezattarin/BERT-Aspect-Based-Sentiment-Analysis" data-width="360" data-height="" data-theme="default"></div>
                               <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
