--- a/index.html
+++ b/index.html
@@ -287,18 +287,12 @@
                         <div class="col-md-12">
                            <align="float">
                               <script src="https://tarptaeya.github.io/repo-card/repo-card.js"></script>
-                              <div class="repo-card" data-repo="nicolezattarin/LOB-feature-analysis" width="360"></div>
-
-                              <div class="github-card" data-github="nicolezattarin/BERT-Aspect-Based-Sentiment-Analysis" data-width="360" data-height="" data-theme="default"></div>
-                              <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
-                              <div class="github-card" data-github="nicolezattarin/PointCloudCompression" data-width="360" data-height="" data-theme="default"></div>
-                              <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
-                              <div class="github-card" data-github="nicolezattarin/3D-Object-Classification" data-width="360" data-height="" data-theme="default"></div>
-                              <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
-                              <div class="github-card" data-github="nicolezattarin/IoMT-efficient-information-distribution" data-width="360" data-height="" data-theme="default"></div>
-                              <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
-                              <div class="github-card" data-github="nicolezattarin/OpenCV-parking-lot-detection" data-width="360" data-height="" data-theme="default"></div>
-                              <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
+                              <div class="repo-card" data-repo="nicolezattarin/LOB-feature-analysis" data-width="360"></div>
+                              <div class="repo-card" data-repo="nicolezattarin/BERT-Aspect-Based-Sentiment-Analysis" data-width="360"></div>
+                              <div class="repo-card" data-repo="nicolezattarin/PointCloudCompression" data-width="360"></div>
+                              <div class="repo-card" data-repo="nicolezattarin/3D-Object-Classification" data-width="360"></div>
+                              <div class="repo-card" data-repo="nicolezattarin/IoMT-efficient-information-distribution" data-width="360"></div>
+                              <div class="repo-card" data-repo="nicolezattarin/OpenCV-parking-lot-detection" data-width="360"></div>
                            </align>
                      </div>
                   </div>
