--- a/index.html
+++ b/index.html
@@ -286,12 +286,12 @@
                      <div class="row">
                         <div class="col-md-12">
                            <align="float">
-                              <script src="https://tarptaeya.github.io/repo-card/repo-card.js"></script>
-                              <div class="repo-card" data-repo="nicolezattarin/LOB-feature-analysis" data-width="360"></div>
+                              <script src="https://raw.githubusercontent.com/nicolezattarin/github-cards/master/src/widget.js"></script>
+                              <div class="repo-card" data-repo="nicolezattarin/LOB-feature-analysis" data-width="360"></div> &nbsp;
                               <div class="repo-card" data-repo="nicolezattarin/BERT-Aspect-Based-Sentiment-Analysis" data-width="360"></div>
-                              <div class="repo-card" data-repo="nicolezattarin/PointCloudCompression" data-width="360"></div>
+                              <div class="repo-card" data-repo="nicolezattarin/PointCloudCompression" data-width="360"></div> &nbsp;
                               <div class="repo-card" data-repo="nicolezattarin/3D-Object-Classification" data-width="360"></div>
-                              <div class="repo-card" data-repo="nicolezattarin/IoMT-efficient-information-distribution" data-width="360"></div>
+                              <div class="repo-card" data-repo="nicolezattarin/IoMT-efficient-information-distribution" data-width="360"></div> &nbsp;
                               <div class="repo-card" data-repo="nicolezattarin/OpenCV-parking-lot-detection" data-width="360"></div>
                            </align>
                      </div>
@@ -323,7 +323,6 @@
                               <div class="hire">
                                  <div align=center>
                                     <link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
-                                    <br><br>
                                     <p style="font-size: 30px; margin-bottom: 0px;"><a href="https://twitter.com/zattacole" style="color: black;" class="fa fa-twitter"></a> &nbsp;&nbsp;&nbsp;&nbsp;
                                        <a href="https://www.linkedin.com/in/nicole-zattarin-a87768105/" style="color: black;" class="fa fa-linkedin"></a> &nbsp;&nbsp;&nbsp;&nbsp;
                                        <a href="https://github.com/nicolezattarin" style="color: black;" class="fa fa-github"></a>
