--- a/index.html
+++ b/index.html
@@ -286,9 +286,8 @@
                      <div class="row">
                         <div class="col-md-12">
                            <align="float">
-                              <script src="https://raw.githubusercontent.com/nicolezattarin/github-cards/master/src/widget.js"></script>
-                              <div class="repo-card" data-repo="nicolezattarin/LOB-feature-analysis" data-width="360"></div> &nbsp;
-                              <div class="repo-card" data-repo="nicolezattarin/BERT-Aspect-Based-Sentiment-Analysis" data-width="360"></div>
+                              <script src="https://tarptaeya.github.io/repo-card/repo-card.js"></script>
+                              <div class="repo-card" data-repo="nicolezattarin/LOB-feature-analysis" data-width="360"></div> &nbsp; <div class="repo-card" data-repo="nicolezattarin/BERT-Aspect-Based-Sentiment-Analysis" data-width="360"></div> <br>
                               <div class="repo-card" data-repo="nicolezattarin/PointCloudCompression" data-width="360"></div> &nbsp;
                               <div class="repo-card" data-repo="nicolezattarin/3D-Object-Classification" data-width="360"></div>
                               <div class="repo-card" data-repo="nicolezattarin/IoMT-efficient-information-distribution" data-width="360"></div> &nbsp;
