--- a/index.html
+++ b/index.html
@@ -236,11 +236,12 @@
                                        <i class="fa fa-terminal"></i>
                                     </div>
                                     <div class="timeline-label">
-                                       <h2>MSc Computer and Informaiton Engineering</a><span>ICT for Internet and Multimedia</span><span>2021 - 2023</span></h2>
-                                       <p><strong>Ecole Centrale de Nantes</strong><br>
+                                       <h2>MSc Computer and Information Engineering</a><span><span>2021 - 2023</span></h2>
+                                       ICT for Internet and Multimedia</span><br>
+                                       <p><strong>University of Padova</strong><br>
                                           🎯 Specialized in Data Science and Deep Learning <br>
-                                          🖼️ Computer Vision and Deep Learning-based processing of 2D and 3D data <br>
-                                          📚 Natural Language Processing tasks and libraries<br>
+                                          🖼️ 2D and 3D Computer Vision  <br>
+                                          📚 Natural Language Processing <br>
                                           💾 Big data management with PySpark and PostgreSQL<br>
                                        <p></p>
                                     </div>
@@ -252,12 +253,12 @@
                                        <i class="fa fa-gear"></i>
                                     </div>
                                     <div class="timeline-label">
-                                       <h2><a href="https://ynov.com/formation/ynov-masteres/mastere-robotique-et-ingenierie-systeme">Master's in Robotics and Embedded Systems</a> <span>2018 - 2019</span></h2>
-                                       <p><strong>Bordeaux Ynov Campus</strong><br>
-                                          🎯 Specialized in Embedded Software Engineering.<br>
-                                          Developed a 3D Scanner.<br>
-                                          Built customized Embedded Linux systems.
-                                          Implemented sensor drivers, test firmwares for System on Chips.</p>
+                                       <h2>BSc Physics</a> <span>2018 - 2021</span></h2>
+                                       <p><strong>University of Milan</strong><br>
+                                          🎯 Specialized in Computational Physics<br>
+                                          ⚛️ Classical and Quantum Physics: Quantum Theory of Matter, Subnuclear Physics...<br>
+                                          📈 Advanced Calculus and Statistics for Modelling and Data Analysis.<br>
+                                          🖥️ Quantum Computing and Quantum Information.<br>
                                        <p></p>
                                     </div>
                                  </div>
